; ModuleID = '/home/carl/AnghaBench/rofi/source/extr_rofi-icon-fetcher.c_rofi_icon_fetcher_get.c'
source_filename = "/home/carl/AnghaBench/rofi/source/extr_rofi-icon-fetcher.c_rofi_icon_fetcher_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_4__ = type { i32* }

@rofi_icon_fetcher_data = common dso_local global %struct.TYPE_5__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @rofi_icon_fetcher_get(i32 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_4__*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load %struct.TYPE_5__*, %struct.TYPE_5__** @rofi_icon_fetcher_data, align 8
  %6 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* %3, align 4
  %9 = call i32 @GINT_TO_POINTER(i32 %8)
  %10 = call %struct.TYPE_4__* @g_hash_table_lookup(i32 %7, i32 %9)
  store %struct.TYPE_4__* %10, %struct.TYPE_4__** %4, align 8
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %12 = icmp ne %struct.TYPE_4__* %11, null
  br i1 %12, label %13, label %17

13:                                               ; preds = %1
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  store i32* %16, i32** %2, align 8
  br label %18

17:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %18

18:                                               ; preds = %17, %13
  %19 = load i32*, i32** %2, align 8
  ret i32* %19
}

declare dso_local %struct.TYPE_4__* @g_hash_table_lookup(i32, i32) #1

declare dso_local i32 @GINT_TO_POINTER(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
